--- a/Shop.html
+++ b/Shop.html
@@ -145,7 +145,7 @@
 
     <div class="product-list">
         <div class="product" id="product-1">
-            <img src="keydord.jfif" alt="สินค้า A">
+            <img src="imges/keydord1.jpg" alt="สินค้า A">
             <h3>Razeak RK-X16 </h3>
             <p>ราคา: 990 บาท</p>
             <p>จำนวนในสต็อก: <span id="stock-1">5</span> ชิ้น</p>
@@ -156,7 +156,7 @@
         </div>
 
         <div class="product" id="product-2">
-            <img src="mou.jfif" alt="สินค้า B">
+            <img src="imges/mou1.jpg" alt="สินค้า B">
             <h3>Logitech G402</h3>
             <p>ราคา: 690 บาท</p>
             <p>จำนวนในสต็อก: <span id="stock-2">3</span> ชิ้น</p>
@@ -167,7 +167,7 @@
         </div>
 
         <div class="product" id="product-3">
-            <img src="th.jfif" alt="สินค้า C">
+            <img src="imges/uu.jpg" alt="สินค้า C">
             <h3>HyperX Cloud Flight</h3>
             <p>ราคา: 1,190 บาท</p>
             <p>จำนวนในสต็อก: <span id="stock-3">7</span> ชิ้น</p>
@@ -178,7 +178,7 @@
         </div>
 
         <div class="product" id="product-4">
-          <img src="joy.jfif" alt="สินค้า D">
+          <img src="imges/joy1.jpg" alt="สินค้า D">
           <h3>Odyssey G7 G70B</h3>
           <p>ราคา: 6,999 บาท</p>
           <p>จำนวนในสต็อก: <span id="stock-4">10</span> ชิ้น</p>
@@ -189,7 +189,7 @@
       </div>
 
       <div class="product" id="product-5">
-        <img src="gpu.jfif" alt="สินค้า E">
+        <img src="imges/gpu1.jpg" alt="สินค้า E">
         <h3>RTX 4070 TI</h3>
         <p>ราคา: 13,990 บาท</p>
         <p>จำนวนในสต็อก: <span id="stock-5">0</span> ชิ้น</p>
@@ -199,7 +199,7 @@
         <p id="stock-alert-5"></p>
     </div>
         <div class="product" id="product-6">
-            <img src="ram.jpg" alt="สินค้า F">
+            <img src="imges/ram.jpg" alt="สินค้า F">
             <h3>KINGSTON RENEGADE RGB16GB (2x8GB) 3200MHz</h3>
             <p>ราคา: 1,890 บาท</p>
             <p>จำนวนในสต็อก: <span id="stock-6">13</span> ชิ้น</p>
